2005-10-21 Mikhail Khodjaiants
	Bug 113364: Wrong values displaying an array of structures.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java

2005-10-18 Mikhail Khodjaiants
	Bug 106632: Invalid detail value for arrays with dimension greater than 100.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java

2005-10-18 Mikhail Khodjaiants
	Bug 111568: Fix for corrupt stack messages not working.
	Applied patch from Timesys.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java

2005-09-01 Mikhail Khodjaiants
	Bug 108636: mi level selection option should be moved to the gdb page.
	* src/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/IMILaunchConfigurationConstants.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2005-09-01 Mikhail Khodjaiants
	Bug 108424: Debugger stops on removed breakpoints.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-08-31 Alain Magloire
	Improve performance by caching the type result on the frame
	and on the RegisterManager.  The patch is originally from Chris Wiebe
	with modifications.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/RegisterManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Register.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/StackFrame.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java

2005-08-31 Alain Magloire
	Fix Pr 107571:  Do not create the Console pipe is we
	have no consumer.
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java

2005-08-28 Alain Magloire
	Speed improvement after exchanging with the HP folks.
	HP has apps having hundred of local variable running on machine
	with hundred of registers.  The latency of the command "-var-create"
	is too taxing.  So we take the approach of not waiting for post command